kubernetes/archive/deploy/octoprint/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  selector:
    matchLabels:
      app: octoprint
      release: octoprint
  template:
    metadata:
      labels:
        app: octoprint
        release: octoprint
    spec:
      automountServiceAccountToken: false
      containers:
      - image: octoprint/octoprint:latest
        imagePullPolicy: Always
        name: octoprint
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /octoprint
          name: config
        - name: printer
          mountPath: /dev/ttyUSB0
        - name: camera
          mountPath: /dev/video0
        securityContext:
          privileged: true
      restartPolicy: Always
      nodeName: chef
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: octoprint
      - name: printer
        hostPath:
          path: /dev/ttyUSB0
      - name: camera
        hostPath:
          path: /dev/video0
