kubernetes/archive/deploy/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: octoprint
    release: octoprint
  type: ClusterIP
