kubernetes/archive/deploy/octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: octoprint
spec:
  rules:
  - host: octoprint.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: octoprint
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
